# HTTP-server

./: .env  Cargo.toml  README.md  gateway.toml.example
crates/dev-gateway/: .env.example  Cargo.toml
crates/dev-gateway/src/: client.rs  config.rs  errors.rs  main.rs
crates/dev-gateway/src/middleware/: logging.rs
crates/dev-gateway/src/proxy/: forward.rs  headers.rs  mod.rs  upgrade.rs
crates/dev-gateway/src/routes/: mod.rs
crates/todo-api/: Cargo.toml
crates/todo-api/src/: config.rs  errors.rs  main.rs
crates/todo-api/src/handlers/: health.rs  mod.rs
crates/todo-api/src/routes/: v1_routes.rs
src/: main.rs
src/models/: mod.rs
src/routes/: mod.rs
