[package]
name = "dev-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum           = "0.7"
tokio          = { version = "1", features = ["full"] }
hyper          = { version = "1", features = ["full"] }
hyper-util     = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
tower          = "0.4"
tower-http     = { version = "0.5", features = ["limit", "timeout"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy        = "0.15"
